# g

./: .mcp.json  CLAUDE.md  CODING_GUIDELINES.md  Cargo.toml
.github/workflows/: publish.yml
.mica/: README.md
.mica/assets/: README.md
.mica/tasks/0001_getting-started/2024-01-01-0001_welcome-to-mica/: README.md
.mica/tasks/0001_getting-started/2024-01-02-0002_understanding-task-structure/: README.md
.mica/tasks/0001_getting-started/2024-01-04-0003_creating-your-first-task/: README.md
.mica/tasks/0002_web-development/2024-02-01-0001_project-setup/: README.md
.serena/: project.yml
docs/: 01-overview.md  02-architecture.md  03-tui-framework.md  04-git-operations.md  05-ui-layout.md  06-keybindings.md  07-config.md  08-features.md
scripts/: ci.sh  setup.sh
src/: app.rs  error.rs  logger.rs  main.rs
src/config/: layout.rs  mod.rs  parser.rs  theme.rs
src/git/: actions.rs  blame.rs  branch.rs  branchgraph.rs  commit.rs  conflict.rs  diff.rs  filetree.rs  issue.rs  loggraph.rs  mod.rs  pullrequest.rs  release.rs  remote.rs  repository.rs  stash.rs  status.rs  submodule.rs  tag.rs  worktree.rs
src/input/: event.rs  mod.rs  reader.rs
src/tui/: buffer.rs  mod.rs  render.rs  style.rs  terminal.rs
src/views/: actions.rs  blame.rs  branches.rs  commits.rs  conflict.rs  diff.rs  filetree.rs  issues.rs  loading.rs  loggraph.rs  menu.rs  mod.rs  pullrequests.rs  releases.rs  remotes.rs  stash.rs  status.rs  submodules.rs  tags.rs  worktree.rs
src/widgets/: block.rs  list.rs  mod.rs  paragraph.rs  scrollbar.rs
(+11 files in other folders)
