[package]
name = "blazing"
version = "0.1.0"
edition = "2021"
authors = ["krzmknt"]
description = "A blazingly fast Git TUI"
license = "MIT"
repository = "https://github.com/krzmknt/g"

[[bin]]
name = "g"
path = "src/main.rs"

[dependencies]
git2 = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
